creating constants for Ch