@@ -5,6 +5,7 @@ import org.matsim.api.core.v01.Scenario;
 import org.matsim.api.core.v01.network.Link;
 import org.matsim.api.core.v01.network.NetworkWriter;
 import org.matsim.api.core.v01.network.Node;
+import org.matsim.contrib.osm.networkReader.SupersonicOsmNetworkReader;
 import org.matsim.core.config.ConfigUtils;
 import org.matsim.core.network.algorithms.NetworkCleaner;
 import org.matsim.core.network.algorithms.NetworkSimplifier;
@@ -30,7 +31,7 @@ public class NetworkPrep {
 
             Scenario sc = ScenarioUtils.createScenario(ConfigUtils.createConfig());
 
-            OsmNetworkReader reader = new OsmNetworkReader(sc.getNetwork(), TransformationFactory.getCoordinateTransformation(TransformationFactory.WGS84,"EPSG:32643"));
+            OsmNetworkReader reader = new OsmNetworkReader(sc.getNetwork(), TransformationFactory.getCoordinateTransformation(TransformationFactory.WGS84, ChandigarhConstants.CH_EPSG));
             reader.parse(osm_netw);
 
             new NetworkSimplifier().run(sc.getNetwork());
@@ -43,23 +44,23 @@ public class NetworkPrep {
 
             Scenario sc = LoadMyScenarios.loadScenarioFromNetwork(matsim_net);
 
-            List<String> nodes_to_keep = Arrays.asList(new String [] {"1425480847","1425480856", "1425480859", "1425480855",
+            List<String> nodes_to_keep = List.of("1425480847","1425480856", "1425480859", "1425480855",
                     "1428104566","1428104568","1425481090","3896472388","3896472383","3896472381","1428088071","1425481182",
                     "1428088074","1428088073","6329884498","6324797296","1425481032","1428119330","1425481067","6324516528",
                     "6330013306","6324702735","1425481134","6324702738","6329877435","6324702733","4833915521","4833915080",
                     "4833915118","4833915522","4833915083","4833915079","6163999707","5560188517","4833915525","4833915073",
                     "6474868668","4830855727","1425480821","1428119350","1428119365","4830811224","1425481037","1425480713",
-                    "6241167504"});
+                    "6241167504");
 
             List<Link> links_to_remove =
                     sc.getNetwork().getLinks().values().stream().filter(l -> !(
                             nodes_to_keep.contains(((Link) l).getToNode().getId().toString()) ||
                                     nodes_to_keep.contains(((Link) l).getFromNode().getId().toString()) ) ).collect(Collectors.toList());
-            links_to_remove.stream().forEach(l-> sc.getNetwork().removeLink(l.getId()));
+            links_to_remove.forEach(l-> sc.getNetwork().removeLink(l.getId()));
 
             // manually remove links
-            List<String> remove_links = Arrays.asList(new String[] {"983","984","3356","3357","233","234","2749","2750","979","980","900","901",
-                    "60","569","568","567","770","771","1586","1587","59","566","3553","3506","3561","4198","4197","3554","4182","2211"});
+            List<String> remove_links = List.of("983","984","3356","3357","233","234","2749","2750","979","980","900","901",
+                    "60","569","568","567","770","771","1586","1587","59","566","3553","3506","3561","4198","4197","3554","4182","2211");
             remove_links.forEach(l -> sc.getNetwork().removeLink(Id.createLinkId(l)));
 
             // remove with zero in- out-links
